--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -630,28 +630,16 @@
     <string name="personalid_grant_location_permission">Grant Location Permission</string>
     <string name="personalid_grant_location_service">Enable Location Service</string>
     <string name="my_worker_history">My Work History</string>
-    <string name="my_earned_credential">My Earned Credential</string>
     <string name="credential">Credential</string>
     <string name="worked_on">Worked On:</string>
     <string name="earned_on">Earned On:</string>
     <string name="active_for">Active For:</string>
     <string name="learn_more_about_credentials">Learn More About Credentials</string>
     <string name="view_credential">View Credential</string>
-    <string name="share_your_accomplishment_with_friends_and_family">Share your accomplishment with friends and family!</string>
-    <string name="learn_more">Learn more about this credential</string>
-    <string name="no_credentials_currently_available">No credentials are currently available. Please click “Refresh” to update the list or try again later.</string>
-    <plurals name="earned_credentials">
-        <item quantity="one">EARNED CREDENTIAL (1)</item>
-        <item quantity="other">EARNED CREDENTIALS (%d)</item>
-    </plurals>
-    <plurals name="credentials_yet_to_be_earned">
-        <item quantity="one">CREDENTIAL YET TO BE EARNED (1)</item>
-        <item quantity="other">CREDENTIALS YET TO BE EARNED (%d)</item>
-    </plurals>
+    <string name="no_credentials_currently_available">No credentials are currently available. Click Refresh or check back later</string>
+    <string name="earned">Earned</string>
+    <string name="pending">Pending</string>
     <string name="cloud_sync">CloudSync</string>
-    <string name="share_active_for">ACTIVE FOR\n%1$s</string>
-    <string name="share_earned_on">EARNED ON\n%1$s</string>
-    <string name="share_worked_on">WORKED ON: %1$s</string>
     <string name="connect_certified_learner">Connect Certified Learner</string>
     <string name="connect_delivery_worker">Connect Delivery Worker</string>
     <string name="commcarehq_worker">CommCareHQ Worker</string>
