--- a/app/res/values-es/strings.xml
+++ b/app/res/values-es/strings.xml
@@ -462,4 +462,16 @@
     <string name="personalid_camera_permission_msg">Para tomar una foto, CommCare necesita permiso para usar la cámara de tu dispositivo.</string>
     <string name="personalid_capture_photo">Tomar foto</string>
     <string name="personalid_configuration_locked_account">Su cuenta ha sido bloqueada. Por favor, contacte con el servicio de asistencia.</string>
+    <string name="my_worker_history">Mi Historial Laboral</string>
+    <string name="credential">Credencial</string>
+    <string name="worked_on">Trabajado en:</string>
+    <string name="earned_on">Obtenido el:</string>
+    <string name="active_for">Activo durante:</string>
+    <string name="learn_more_about_credentials">Más Información Sobre las Credenciales</string>
+    <string name="view_credential">Ver Credencial</string>
+    <string name="no_credentials_currently_available">No hay credenciales disponibles actualmente. Haga clic en Actualizar o vuelva a consultar más tarde.</string>
+    <string name="earned">Ganado</string>
+    <string name="pending">Pendiente</string>
+    <string name="cloud_sync">Sincronización en la Nube</string>
+
 </resources>
