--- a/app/res/values-lt/strings.xml
+++ b/app/res/values-lt/strings.xml
@@ -74,4 +74,13 @@
     <string name="no_gps_title">Location Data Disabled</string>
     <string name="no_gps_message">The location providers on this device are currently disabled. Do you want to change those settings?</string>
     <string name="change_settings">Change Settings</string>
+    <string name="left_navigation_menu_signin_register"><u>Accedi / Registrati</u></string>
+    <string name="left_navigation_menu_help">Aiuto</string>
+    <string name="left_navigation_menu_not_signed_in_to_personal_id">Non hai effettuato l’accesso all'ID personale</string>
+    <string name="left_navigation_menu_opportunities">Opportunità</string>
+    <string name="left_navigation_menu_commcare_apps">App CommCare</string>
+    <string name="left_navigation_menu_work_history">Storico lavorativo</string>
+    <string name="left_navigation_menu_payments">Pagamenti</string>
+    <string name="left_navigation_menu_manage_profile">Gestisci profilo</string>
+
 </resources>
