--- a/app/res/values-pt/strings.xml
+++ b/app/res/values-pt/strings.xml
@@ -448,8 +448,11 @@
     <string name="personalid_configuration_process_failed_title">Falha no processo</string>
     <string name="personalid_configuration_locked_account">A sua conta foi bloqueada. Entre em contacto com o suporte</string>
     <string name="personalid_configuration_process_failed_subtitle">De momento, o seu dispositivo não está qualificado para se inscrever no PersonalID. Tente novamente noutro dispositivo.</string>
-    <string name="personalid_configuration_process_pin_unavailable_message">O mecanismo de segurança do PIN não está disponível. Corrija o problema ou tente novamente com um dispositivo diferente.</string>
-    <string name="personalid_configuration_process_biometric_unavailable_message">O mecanismo de segurança biométrica não está disponível. Corrija o problema ou tente novamente com um dispositivo diferente.</string>
+    <string name="personalid_configuration_process_pin_unavailable_message">O mecanismo de segurança do PIN não está disponível, tente novamente mais tarde.</string>
+    <string name="personalid_configuration_process_biometric_unavailable_message">O mecanismo de segurança biométrica não está disponível, tente novamente mais tarde.</string>
+    <string name="personalid_configuration_process_pin_needs_update_message">O mecanismo de segurança do PIN requer uma atualização de software. Aplique todas as atualizações de sistema disponíveis ou tente novamente com um dispositivo diferente.</string>
+    <string name="personalid_configuration_process_biometric_needs_update_message">O mecanismo de segurança biométrica requer uma atualização de software. Aplique todas as atualizações de sistema disponíveis ou tente novamente com um dispositivo diferente.</string>
+    <string name="personalid_configuration_process_biometric_no_hardware_message">O PersonalID requer que seu dispositivo tenha um sensor biométrico. Tente novamente com outro dispositivo.</string>
     <string name="personalid_configuration_process_failed_play_services">Certifique-se de que a Play Store está disponível no seu dispositivo e está atualizada.</string>
     <string name="personalid_configuration_process_failed_temporary_unavailable">Erro temporário ao verificar a elegibilidade do seu dispositivo. Por favor, tente novamente depois de um dia.</string>
     <string name="personalid_configuration_process_failed_network_error">Erro de rede ao verificar a elegibilidade do seu dispositivo. Por favor, certifique-se de que tem uma boa conexão de rede e tente novamente.</string>
