--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -633,18 +633,18 @@
     <string name="personalid_location_service_error">Location service is not available. Please enable it</string>
     <string name="personalid_grant_location_permission">Grant Location Permission</string>
     <string name="personalid_grant_location_service">Enable Location Service</string>
-    <string name="my_worker_history">My Work History</string>
-    <string name="credential">Credential</string>
-    <string name="worked_on">Worked On:</string>
-    <string name="earned_on">Earned On:</string>
-    <string name="active_for">Active For:</string>
-    <string name="learn_more_about_credentials">Learn More About Credentials</string>
-    <string name="view_credential">View Credential</string>
-    <string name="no_credentials_currently_available">No credentials are currently available. Click Refresh or check back later</string>
-    <string name="earned">Earned</string>
-    <string name="pending">Pending</string>
-    <string name="cloud_sync">CloudSync</string>
-    <string name="connect_certified_learner">Connect Certified Learner</string>
-    <string name="connect_delivery_worker">Connect Delivery Worker</string>
+    <string name="personalid_credential_my_worker_history">My Work History</string>
+    <string name="personalid_credential">Credential</string>
+    <string name="personalid_credential_worked_on">Worked On:</string>
+    <string name="personalid_credential_earned_on">Earned On:</string>
+    <string name="personalid_credential_view_credential">View Credential</string>
+    <string name="personalid_credential_active_for">Active For:</string>
+    <string name="personalid_credential_learn_more_about_credentials">Learn More About Credentials</string>
+    <string name="personalid_credential_no_credentials_currently_available">No credentials are currently available. Click Refresh or check back later</string>
+    <string name="personalid_credential_earned">Earned</string>
+    <string name="personalid_credential_pending">Pending</string>
+    <string name="personalid_credential_cloud_sync">CloudSync</string>
+    <string name="personalid_credential_connect_certified_learner">Connect Certified Learner</string>
+    <string name="personalid_credential_connect_delivery_worker">Connect Delivery Worker</string>
     <string name="commcarehq_worker">CommCareHQ Worker</string>
 </resources>
