--- a/app/res/values-fr/strings.xml
+++ b/app/res/values-fr/strings.xml
@@ -466,16 +466,16 @@ License.
     <string name="personalid_camera_permission_title">Autorisation pour la caméra</string>
     <string name="personalid_camera_permission_msg">Afin de prendre une photo, CommCare a besoin de l\'autorisation d\'utiliser l\'appareil photo de votre appareil.</string>
     <string name="personalid_capture_photo">Prendre une photo</string>
-    <string name="my_worker_history">Mon Historique de Travail</string>
-    <string name="credential">Titre de Compétences</string>
-    <string name="worked_on">Travaillé Sur :</string>
-    <string name="earned_on">Gagné Le :</string>
-    <string name="active_for">Actif Pendant :</string>
-    <string name="learn_more_about_credentials">En Savoir Plus Sur les Titres de Compétences</string>
-    <string name="view_credential">Voir le Titre de Compétences</string>
-    <string name="no_credentials_currently_available">Aucune information d\'identification n\'est actuellement disponible. Cliquez sur Actualiser ou revenez plus tard.</string>
-    <string name="earned">Gagné</string>
-    <string name="pending">En attente</string>
-    <string name="cloud_sync">Synchronisation Cloud</string>
+    <string name="personalid_credential_my_worker_history">Mon Historique de Travail</string>
+    <string name="personalid_credential">Titre de Compétences</string>
+    <string name="personalid_credential_worked_on">Travaillé Sur :</string>
+    <string name="personalid_credential_earned_on">Gagné Le :</string>
+    <string name="personalid_credential_active_for">Actif Pendant :</string>
+    <string name="personalid_credential_learn_more_about_credentials">En Savoir Plus Sur les Titres de Compétences</string>
+    <string name="personalid_credential_view_credential">Voir le Titre de Compétences</string>
+    <string name="personalid_credential_no_credentials_currently_available">Aucune information d\'identification n\'est actuellement disponible. Cliquez sur Actualiser ou revenez plus tard.</string>
+    <string name="personalid_credential_earned">Gagné</string>
+    <string name="personalid_credential_pending">En attente</string>
+    <string name="personalid_credential_cloud_sync">Synchronisation Cloud</string>
 
 </resources>
