--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -643,4 +643,5 @@
     <string name="left_navigation_menu_work_history">Work History</string>
     <string name="left_navigation_menu_payments">Payments</string>
     <string name="left_navigation_menu_manage_profile">Manage Profile</string>
+    <string name="user_name_placeholder">User Name</string>
 </resources>
