--- a/app/res/values-fr/strings.xml
+++ b/app/res/values-fr/strings.xml
@@ -466,14 +466,14 @@ License.
     <string name="personalid_camera_permission_title">Autorisation pour la caméra</string>
     <string name="personalid_camera_permission_msg">Afin de prendre une photo, CommCare a besoin de l\'autorisation d\'utiliser l\'appareil photo de votre appareil.</string>
     <string name="personalid_capture_photo">Prendre une photo</string>
-    <string name="left_navigation_menu_signin_register"><u>Se connecter / S’inscrire</u></string>
-    <string name="left_navigation_menu_help">Aide</string>
-    <string name="left_navigation_menu_not_signed_in_to_personal_id">Vous n\'êtes pas connecté à l\'identifiant personnel</string>
-    <string name="left_navigation_menu_opportunities">Opportunités</string>
-    <string name="left_navigation_menu_commcare_apps">Applications CommCare</string>
-    <string name="left_navigation_menu_work_history">Historique de travail</string>
-    <string name="left_navigation_menu_payments">Paiements</string>
-    <string name="left_navigation_menu_manage_profile">Gérer le profil</string>
+    <string name="nav_drawer_signin_register">Se connecter / S’inscrire</string>
+    <string name="nav_drawer_help">Aide</string>
+    <string name="nav_drawer_not_signed_in_to_personal_id">Vous n\'êtes pas connecté à l\'identifiant personnel</string>
+    <string name="nav_drawer_opportunities">Opportunités</string>
+    <string name="nav_drawer_commcare_apps">Applications CommCare</string>
+    <string name="nav_drawer_work_history">Historique de travail</string>
+    <string name="nav_drawer_payments">Paiements</string>
+    <string name="nav_drawer_manage_profile">Gérer le profil</string>
     <string name="play_service_update_error">Veuillez vous assurer que les services Google Play sont pris en charge sur l\'appareil et sont à jour.</string>
 
 </resources>
