--- a/app/res/values-pt/strings.xml
+++ b/app/res/values-pt/strings.xml
@@ -472,13 +472,13 @@
     <string name="personalid_camera_permission_title">Permissão para câmara</string>
     <string name="personalid_camera_permission_msg">Para tirar uma fotografia, o CommCare precisa de permissão para utilizar a câmara do seu dispositivo.</string>
     <string name="personalid_capture_photo">Capturar foto</string>
-    <string name="left_navigation_menu_signin_register"><u>Entrar / Registrar-se</u></string>
-    <string name="left_navigation_menu_help">Ajuda</string>
-    <string name="left_navigation_menu_not_signed_in_to_personal_id">Você não está conectado ao ID Pessoal</string>
-    <string name="left_navigation_menu_opportunities">Oportunidades</string>
-    <string name="left_navigation_menu_commcare_apps">Aplicativos CommCare</string>
-    <string name="left_navigation_menu_work_history">Histórico de trabalho</string>
-    <string name="left_navigation_menu_payments">Pagamentos</string>
-    <string name="left_navigation_menu_manage_profile">Gerenciar perfil</string>
+    <string name="nav_drawer_signin_register">Entrar / Registrar-se</string>
+    <string name="nav_drawer_help">Ajuda</string>
+    <string name="nav_drawer_not_signed_in_to_personal_id">Você não está conectado ao ID Pessoal</string>
+    <string name="nav_drawer_opportunities">Oportunidades</string>
+    <string name="nav_drawer_commcare_apps">Aplicativos CommCare</string>
+    <string name="nav_drawer_work_history">Histórico de trabalho</string>
+    <string name="nav_drawer_payments">Pagamentos</string>
+    <string name="nav_drawer_manage_profile">Gerenciar perfil</string>
     <string name="play_service_update_error">Certifique-se de que os serviços do Google Play sejam suportados no dispositivo e estejam atualizados.</string>
 </resources>
